Fix: keep tabs visible in fullscreen mode

--- a/.mozilla/firefox/s02gjvxz.Emiel/chrome/userChrome.css
+++ b/.mozilla/firefox/s02gjvxz.Emiel/chrome/userChrome.css
@@ -9,9 +9,11 @@
   #mainPopupSet ~ box {
     -moz-box-ordinal-group: 10;
   }
+
   #titlebar {
     -moz-box-ordinal-group: 10;
   }
+
   #urlbar {
     top: unset !important;
     bottom: calc(
@@ -21,42 +23,57 @@
     display: flex !important;
     flex-direction: column !important;
   }
+
   #urlbar-input-container {
     order: 2;
   }
+
   #urlbar > .urlbarView {
     order: 1;
     border-bottom: 1px solid #666;
   }
+
   #urlbar-results {
     display: flex;
     flex-direction: column-reverse;
   }
+
   .search-one-offs {
     display: none !important;
   }
+
   .tab-background {
     border-top: none !important;
   }
+
   #navigator-toolbox::after {
     border: none;
   }
+
   #TabsToolbar .tabbrowser-arrowscrollbox,
   #tabbrowser-tabs,
   .tab-stack {
     min-height: 28px !important;
+    padding-bottom: 2px;
+    background-color: #202124;
   }
+
   .tabbrowser-tab {
     font-size: 80%;
   }
+
   .tab-content {
     padding: 0 5px;
   }
+
   .tab-close-button .toolbarbutton-icon {
     width: 12px !important;
     height: 12px !important;
   }
+
+  /*
   toolbox[inFullscreen="true"] {
     display: none;
   }
+  */
 }
